--- a/src/com/Ostermiller/attesoro/Editor_zh.properties
+++ b/src/com/Ostermiller/attesoro/Editor_zh.properties
@@ -20,6 +20,8 @@ comment_label=\u6ce8\u91ca\uff1a
 copy_comment=\u590d\u5236
 copy_text=\u590d\u5236
 country=\u56fd\u5bb6\uff1a
+country_CN=\u4e2d\u56fd\uff08\u7b80\u4f53\uff09
+country_US=\u7f8e\u56fd
 default_comment_label=\u9ed8\u8ba4\u6ce8\u91ca\uff1a
 default_translation_label=\u9ed8\u8ba4\u6587\u672c\uff1a
 delete_key_menu_name=\u5220\u9664
@@ -30,10 +32,14 @@ error=\u9519\u8bef
 exit=\u9000\u51fa
 file_menu_name=\u6587\u4ef6
 find_menu_name=\u67e5\u627e...
+getcode_menu_name=\u83b7\u53d6Java\u8f85\u52a9\u4ee3\u7801
 help_menu_name=\u5e2e\u52a9
 key_menu_name=\u952e
 lang_menu_name=\u5730\u533a
 language=\u8bed\u8a00\uff1a
+language_en=\u82f1\u8bed
+language_zh=\u4e2d\u6587
+load_file_title=\u8bf7\u9009\u62e9\u4e00\u4e2aproperties\u6587\u4ef6
 load_menu_name=\u6253\u5f00...
 next_key_menu_name=\u4e0b\u4e00\u4e2a\u952e
 previous_key_menu_name=\u4e0a\u4e00\u4e2a\u952e
